objects/LLC_BI__Spread_Projections_Template__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Administrators populate this optional text field with descriptive information about a projections template. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Administrators populate this required checkbox field to define if projection templates are suitable for use. Active templates display in the Projections subroute in the Spreads Configuration route in nCino Administration. By default, it is set to true.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Projections Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Projections Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>